Regression: Bad pixels In Glossy and Transmissive Passes with CPU rendering #108125

Closed
opened 2023-05-21 21:34:58 +02:00 by AgentA1cr · 9 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Quadro K3100M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 426.78

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-20 11:24, hash: ab294b4ebb00
Worked: 3.4.0

Short description of error
I've come across a particular configuration of the Principled BSDF shader that causes it to return bad values in the glossy and transmissive passes. These values appear to be Not a Number, or some other similar contagious value, as bluring and denoising both propagate the effect, and the affected pixels return false for both >0 and <10000 in compositing:
Bad Pixel Bug (Glossy Compositing).png
Bad Pixel Bug (Trans Compositing).png

As shown below, the error only occurs for roughness values between ~.021 and ~.024:
Bad Pixel Bug (Roughness 0.02).png
Bad Pixel Bug (Roughness 0.022).png
Bad Pixel Bug (Roughness 0.025).png

Additionally, the bug only occurs if the material has some level of transparency, and only when the cube is set to shade smooth. Flat shading does not exhibit the error.

Issue is only observed when rendering with CPU

This bug may or may not be related to blender/blender#100199.

Exact steps for others to reproduce the error
Open attached .blend file. (Glossy Glitch Test.blend)
Set Viewport Shading to Rendered.
Ensure Render Pass is set to Glossy Direct.
As rendering progresses, the number of black pixels will increase with the number of samples.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Quadro K3100M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 426.78 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-20 11:24, hash: `ab294b4ebb00` Worked: 3.4.0 **Short description of error** I've come across a particular configuration of the Principled BSDF shader that causes it to return bad values in the glossy and transmissive passes. These values appear to be Not a Number, or some other similar contagious value, as bluring and denoising both propagate the effect, and the affected pixels return false for both >0 and <10000 in compositing: ![Bad Pixel Bug (Glossy Compositing).png](/attachments/cff293cc-eae6-4bd7-bd59-c97d0559b79a) ![Bad Pixel Bug (Trans Compositing).png](/attachments/0e0661a9-1809-4b39-9d0e-e03cf40273f7) As shown below, the error only occurs for roughness values between ~.021 and ~.024: ![Bad Pixel Bug (Roughness 0.02).png](/attachments/9069f5b3-a32a-4ff2-ab88-1eaf4bb34d7f) ![Bad Pixel Bug (Roughness 0.022).png](/attachments/e069fd21-c1b7-4b01-8833-6b4d03567733) ![Bad Pixel Bug (Roughness 0.025).png](/attachments/510ff726-cd9c-4367-a26f-ae88d760aa90) Additionally, the bug only occurs if the material has some level of transparency, and only when the cube is set to shade smooth. Flat shading does not exhibit the error. Issue is only observed when rendering with CPU This bug may or may not be related to blender/blender#100199. **Exact steps for others to reproduce the error** Open attached .blend file. ([Glossy Glitch Test.blend](/attachments/5b0287c7-0c05-4770-8a2b-984e71ebeb8c)) Set Viewport Shading to Rendered. Ensure Render Pass is set to Glossy Direct. As rendering progresses, the number of black pixels will increase with the number of samples.
AgentA1cr added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-05-21 21:34:59 +02:00
AgentA1cr changed title from Bad pixels (NaN?) In Glossy and Transmissive Passes to Cycles: Bad pixels (NaN?) In Glossy and Transmissive Passes 2023-05-22 18:21:57 +02:00
AgentA1cr changed title from Cycles: Bad pixels (NaN?) In Glossy and Transmissive Passes to Cycles Regression: Bad pixels (NaN?) In Glossy and Transmissive Passes 2023-05-22 18:31:42 +02:00
Author

After additional testing, I've determined that the issue only occurs when using CPU rendering. GPU Compute does not exhibit the same artifacts.

Path Guiding and Light Tree settings have no effect one way or the other.

After additional testing, I've determined that the issue only occurs when using CPU rendering. GPU Compute does not exhibit the same artifacts. Path Guiding and Light Tree settings have no effect one way or the other.
Iliya Katushenock changed title from Cycles Regression: Bad pixels (NaN?) In Glossy and Transmissive Passes to Regression: Bad pixels (NaN?) In Glossy and Transmissive Passes 2023-05-24 06:33:47 +02:00
Iliya Katushenock added the
Interest
Compositing
Interest
Render & Cycles
labels 2023-05-24 06:34:17 +02:00

@AgentA1cr I wanted to bisect this issue, but I am having trouble creating .blend file from scratch. Can you provide one created in 3.5 version?

@AgentA1cr I wanted to bisect this issue, but I am having trouble creating .blend file from scratch. Can you provide one created in 3.5 version?

I have fuzzed around a bit, and to me it seems that 3.5 behavior is same as main branch, so will remove high prio label until regression can be reproduced.

I have fuzzed around a bit, and to me it seems that 3.5 behavior is same as main branch, so will remove high prio label until regression can be reproduced.
Richard Antalik removed the
Priority
High
label 2023-05-25 06:04:19 +02:00
Iliya Katushenock removed the
Interest
Render & Cycles
label 2023-05-25 07:41:22 +02:00
Author

The testing I did in 3.5.1 was on a different computer than the one used to test the 3.4.0 (working) and main branch (buggy) behavior. I'll download 3.5.1 on the original device and perform some further testing.

The testing I did in 3.5.1 was on a different computer than the one used to test the 3.4.0 (working) and main branch (buggy) behavior. I'll download 3.5.1 on the original device and perform some further testing.
Author

Can confirm that the issue does occur in 3.5.1 on the original device, but not in 3.4.0. I'll change the "worked" entry back to 3.4.0.

Can confirm that the issue does occur in 3.5.1 on the original device, but not in 3.4.0. I'll change the "worked" entry back to 3.4.0.
Member

Can confirm the difference in 3.4 and 3.6

Can confirm the difference in 3.4 and 3.6
Pratik Borhade added the
Priority
High
label 2023-05-26 10:57:27 +02:00
Pratik Borhade changed title from Regression: Bad pixels (NaN?) In Glossy and Transmissive Passes to Regression: Bad pixels In Glossy and Transmissive Passes with CPU rendering 2023-05-26 11:00:59 +02:00
Member

Raising the priority.
@lichtwerk hi, can you bisect?

Raising the priority. @lichtwerk hi, can you bisect?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-26 12:17:41 +02:00
Member

Raising the priority.
@lichtwerk hi, can you bisect?

Cant repro in 4.0 and the file only opens in 4.0 for me 8crashes every other version)
Can someone put up a file that opens in 3.4 / 3.5 ?

> Raising the priority. > @lichtwerk hi, can you bisect? Cant repro in 4.0 and the file only opens in 4.0 for me 8crashes every other version) Can someone put up a file that opens in 3.4 / 3.5 ?
Member

Oh, OK, seems i was too slow, good it is fixed now!

Oh, OK, seems i was too slow, good it is fixed now!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108125
No description provided.