Fix #108125: Cycles generates NaN in render passes with low roughness

Slightly increase threshold to avoid division by zero.